--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WisdomDaily</title>
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background: #35424a;
+            color: #ffffff;
+            padding: 10px 20px;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: #ffffff;
+            text-decoration: none;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        section {
+            margin: 20px 0;
+            background: #ffffff;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #35424a;
+            color: #ffffff;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+        }
+
+    </style>
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
@@ -11,10 +70,10 @@
         <h1>Welcome to WisdomDaily</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#forum">Discussion Forum</a></li>
-                <li><a href="#resources">Resource Library</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="html/index.html">Home</a></li>
+                <li><a href="html/discussion-forum.html">Discussion Forum</a></li>
+                <li><a href="html/resource-library.html">Resource Library</a></li>
+                <li><a href="html/about-us.html">About Us</a></li>
             </ul>
         </nav>
     </header>
